# kde-plasma-gradient-wallpaper

./: CMakeLists.txt  Messages.sh  README  gradient.kdev4  install.sh  package.tar.xz  upgrade.sh
package/: metadata.desktop
package/contents/config/: main.xml
package/contents/ui/: config.qml  main.qml
package/contents/ui/Components/: Background.qml
plugin/: CMakeLists.txt  gradientplugin.cpp  gradientplugin.h  qmldir
